@@ -132,6 +132,11 @@ is roughly equivalent to the following fragments in a build.xml file:
   </tr>
 </table>
 
+<h3><a name="nested">Nested Elements</a></h3>
+<h4>xmlcatalog</h4>
+<p>The <a href="../CoreTypes/xmlcatalog.html"><tt>&lt;xmlcatalog&gt;</tt></a>
+element is used to perform entity resolution.</p>
+
 <a name="examples">
 <h3>Examples</h3>
 </a>
